test/interpreter/error/err_03_stack_overflow.pl0
program stackoverflow;
procedure recursive();
begin
  call recursive();
end;
begin
  call recursive();
end